[metadata]
name = growmax
version = 1.2.4
author = Matt Davis and OpenSensor.io
author_email = matteius@gmail.com
description = Micropython routines for automated plant watering and monitoring.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/opensensor/growmax
project_urls =
    Bug Tracker = https://github.com/opensensor/growmax/-/issues
    repository = https://github.com/opensensor/growmax
classifiers =
    Programming Language :: Python :: Implementation :: MicroPython
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
